<resources>
    <string name="app_name">PropertyInspector</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export</string>
    <string name="house_photo">The photo of House</string>
    <string name="address">Address</string>
    <string name="house_type">House Type</string>
    <string name="house_size">Land Size (m2)</string>
    <string name="land_shape">Land shape</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="axe">Axe</string>
    <string name="ladder">Ladder</string>
    <string name="bedroom_numbers">Bedroom numbers</string>
    <string name="master_room_size">Master room size (m2)</string>
    <string name="length">Length (m)</string>
    <string name="multiply">x</string>
    <string name="width">Width (m)</string>
    <string name="equal">=</string>
    <string name="master_room_bathroom">Master room bathroom</string>
    <string name="old">old</string>
    <string name="usable">usable</string>
    <string name="new_decoration">new</string>
    <string name="master_room_direction">Master room direction</string>
    <string name="face_northwest">Facing northwest</string>
    <string name="rampus">Rampus</string>
    <string name="rampus_or_study">Rampus or Study</string>
    <string name="absent">Absent</string>
    <string name="without_kitchen">Attached</string>
    <string name="with_kitchen">Separated</string>
    <string name="without_door">Without Door</string>
    <string name="with_door">With Door</string>
    <string name="grannyFlat">Granny Flat/ In-law accommodation</string>
    <string name="kitchen_size">Kitchen Size (m2)</string>
    <string name="covered_carpark">Covered Car park (2.6x5.2m counted as one)</string>
    <string name="carpark_number">Car park space number</string>
    <string name="uncovered_carpark">Uncovered car park (drive way)</string>
    <string name="living_area">Living area size (m2)</string>
    <string name="dinning">Dinning</string>
    <string name="family">Family</string>
    <string name="decoration">Decoration</string>
    <string name="plus">+</string>
    <string name="sum">Sum =</string>
    <string name="has_gas">Has Gas Supply</string>
    <string name="broken">Broken</string>
    <string name="kitchen_decoration">Kitchen_decoration</string>
    <string name="additional_facility">Additional Facility</string>
    <string name="aircon">Aircon</string>
    <string name="timber_warmer">Floor warmer</string>
    <string name="timber">Timber Floor</string>
    <string name="fireplace">FirePlace</string>
    <string name="alfresco">Alfresco</string>
    <string name="backyard_size">Backyard Size</string>
    <string name="backyard_shape">Backyard Shape</string>
    <string name="bushes">Bushes</string>
    <string name="slope">slope</string>
    <string name="steps">steps</string>
    <string name="flat">Flat</string>
    <string name="swimming_pool">Swimming pool and Spa</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="location">Location</string>
    <string name="road_condition">Road Condition</string>
    <string name="main_road">Main road</string>
    <string name="medium_road">Medium road</string>
    <string name="small_road">Small road</string>
    <string name="no_through_road">No through road</string>
    <string name="normal_road">Normal road</string>
    <string name="quiet_road">Quiet Road</string>
    <string name="calculate_and_save">Calculate And Save</string>
    <string name="commute">Commute to City (15 min walk range)</string>
    <string name="train">Train</string>
    <string name="express_bus">Express Bus</string>
    <string name="bus">Bus</string>
    <string name="drive_only">Drive only</string>
    <string name="shopping">Shopping (20min walk range)</string>
    <string name="bus_to_mall">Bus to mall</string>
    <string name="village">Village</string>
    <string name="mall">Mall</string>
    <string name="catchment">Primary schoold catchment Ranking</string>
    <string name="less_than_96"><![CDATA[<96]]></string>
    <string name="poor_catchment"><![CDATA[<96]]></string>
    <string name="ok_catchment">96-97</string>
    <string name="good_catchment">98-99</string>
    <string name="great_catchment">100</string>
    <string name="fengshui">Feng Shui</string>
    <string name="out_of_bow">Out of Bow</string>
    <string name="road_on_face">Road in face</string>
    <string name="lower_than_road">Roof lower than road</string>
    <string name="elec_tower">Electric tower around</string>
    <string name="master_room_wardrobe">Master room wardrobe</string>
    <string name="square_meter_format">%s m\u00B2</string>
    <string name="edit">Edit</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email address</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_preference_header">User perference</string>
    <string name="suburb_weight">Suburb weight</string>
    <string name="decoration_weight">Decoration weight</string>
    <string name="location_weight">House location weight</string>
    <string name="shape_weight">House shape weight</string>
    <string name="base_rank">House base rank</string>
</resources>
