<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_space"
    tools:context=".ui.EditFragment">

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:contentDescription="@string/house_photo"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/addressTextView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/houseTypeTextView"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/house_type" />

    <TextView
        android:id="@+id/houseSizeTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/house_size" />

    <EditText
        android:id="@+id/houseSizeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/house_size"
        android:inputType="number" />

    <TextView
        android:id="@+id/landShapeTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/land_shape" />

    <RadioGroup
        android:id="@+id/landShapeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/medium_space">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/square" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangle" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/axe" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ladder" />

    </RadioGroup>

    <TextView
        android:id="@+id/bedroomNumbersTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bedroom_numbers" />

    <EditText
        android:id="@+id/bedroomNumbersEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bedroom_numbers"
        android:inputType="number" />

    <TextView
        android:id="@+id/MasterRoomSizeTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/master_room_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/MasterRoomLengthEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/length"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_space"
            android:text="@string/multiply"
            android:textSize="@dimen/largeText" />

        <EditText
            android:id="@+id/MasterRoomWidthEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/width"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_space"
            android:text="@string/equal"
            android:textSize="@dimen/largeText" />

        <TextView
            android:id="@+id/MasterRoomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="20 m2" />
    </LinearLayout>

    <TextView
        android:id="@+id/MasterRoomBathroomTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/master_room_bathroom" />

    <RadioGroup
        android:id="@+id/MasterRoomBathroomRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/medium_space">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/old" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usable" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_decoration" />

    </RadioGroup>

    <TextView
        android:id="@+id/MasterRoomDirectionTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/master_room_direction" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/MasterRoomDirectionCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_space"
        android:checked="true"
        android:text="@string/face_northwest" />


</LinearLayout>